--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -r esm --inspect-brk --inspect=0.0.0.0:9229 src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +18,12 @@
   },
   "homepage": "https://github.com/ankitbaraskar/burger#readme",
   "dependencies": {
+    "esm": "^3.2.22",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.0"
   }
 }
