changed start script in package.json

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon -r esm --inspect-brk --inspect=0.0.0.0:9229 src/server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
